2011-05-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #33130. Thanks to Antoine Mercier-Linteau for the patch.
	* doc/examples/twitest/twitest.c: Check for reception of NAK.

2011-05-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #32650.
	* include/util/delay.h.in: Add math.h to list of includes.
	* NEWS: Add to fixed bug list.

2011-05-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #32675.
	* include/avr/power.h: Add TIM1 to power_all_enable() and
	power_all_disable().
	* NEWS: Add to fixed bug list.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/pgmspace.h: Reorder so __strlen_P is declared by
	the time it is attempted to be used.
	* libc/stdlib/dtostre.c: Part #2 of fix for bug #32988: make
	`s' a `const char *' as it is pointing to a constant (flash)
	string.

2011-05-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #32988.
	* include/avr/pgmspace.h: Add const keyword to PSTR definition.
	* NEWS: Add to fixed bug list.

2011-05-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #33230.
	* include/avr/sleep.h: Move conditionals for devices attiny261,
	attiny261a, attiny461, attiny461a, attiny861, attiny861a to
	correct location.
	* NEWS: Add to fixed bug list.

2011-05-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #33238.
	* include/avr/iom8u2.h: Fix _VECTORS_SIZE value.
	* include/avr/iom16u2.h: Same.
	* include/avr/iom32u2.h: Same.
	* NEWS: Add to fixed bug list.

2011-03-17  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn11.h: Poison deprecated items.
	* include/avr/iotn12.h: Same.
	* include/avr/iotn13.h: Same.
	* include/avr/iotn15.h: Same.
	* include/avr/iotn22.h: Same.
	* include/avr/iotn2313.h: Same. Also: remove duplicate definitions.
	* include/avr/iotn26.h: Same.
	* include/avr/iotn28.h: Same.

2011-03-16  Eric B. Weddington  <eric.weddington@atmel.com>
